# VaraFi

blockchain/: Cargo.toml  README.md  build.rs  rustc-ice-2025-07-02T12_09_42-22968.txt  rustc-ice-2025-07-02T12_10_32-23111.txt  rustc-ice-2025-07-03T04_34_46-27343.txt
blockchain/app/: Cargo.toml
blockchain/app/src/: io.rs  lib.rs  vft_service.rs
blockchain/client/: Cargo.toml  build.rs
blockchain/client/src/: lib.rs
blockchain/src/: lib.rs
blockchain/tests/: gtest.rs
