[workspace]
members = ["client"]


[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
blockchain-app = { path = "app" }

[build-dependencies]
blockchain-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
blockchain = { path = ".", features = ["wasm-binary"] }
blockchain-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] } # Keep default features for gtest if it relies on std for testing runner
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []