[package]
name = "blockchain-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = "0.8.0"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }
extended-vft-client = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
parity-scale-codec = { version = "3.6", features = ["std"] }
scale-info = { version = "2.10", features = ["std"] }
